--- a/index4.html
+++ b/index4.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
     <link rel="stylesheet" href="style3.css"/>
+    <style type="text/css"></style>
 </head>
 <body>
     <main>
