--- a/index4.html
+++ b/index4.html
@@ -5,7 +5,153 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
     <link rel="stylesheet" href="style3.css"/>
-    <style type="text/css"></style>
+    <style type="text/css">
+        *{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+body{
+    background:white;
+    color:black;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+color:lightgray;
+
+
+}
+main{
+    margin:50px;
+    padding: 50px;
+   
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+.main{margin:0px;
+    padding: 20px;
+    border:1px solid lightgray;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+h1{color:black;
+    font-family:cursive;
+}
+
+input{background: #edf0f3;
+    outline: none;
+border: 1px solid lightgray;
+width:300px;
+margin:10px;
+padding: 10px;
+}
+input:hover{border-color:gray;
+
+}
+.login{
+     padding:10px;
+    margin:10px;
+    width:300px;
+    border:transparent;
+    background: #189ad3;
+    border-radius: 10px;
+    color:white
+}
+span{
+    font-size: 15px;
+}
+.or{
+    display: flex;
+    margin:10px
+    }
+.line{
+    border-bottm:1px solid #888
+}
+a{
+    text-decoration: unset;
+}
+a:hover{
+    cursor: pointer;
+}
+.facebook{
+    color:darkblue;
+    margin:20px;
+}
+.facebook img{
+    max-width: 15px;
+}
+.password{
+    margin:20px;
+    font-size: 0.7em;
+    color:darkblue;
+}
+.secondbox{
+    margin:10px;
+    padding:30px;
+    border: 1px solid lightgray;
+    color:black;
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.secondbox a{
+    color:#189AD3
+}
+.gettheapp{
+    color:black;
+    font-size: 0.7em;
+    margin:20px;
+}
+.imagelink{
+    display:flex;
+    gap: 3px;}
+.imagelink2{
+    display:flex;
+    gap: 2px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    background: black;
+    padding:0px;
+
+}
+
+.imagelink2 span{
+    font-size: 1.1em;
+    color:white;
+
+}
+.imagelink img{
+    max-width:40px;
+}
+.imagelink3{
+    display:flex;
+    border:1px solid lightgray;
+    border-radius: 10px;
+    background:black;
+}
+.imagelink3 span{
+    color:white;
+    font-size: 1.1em;
+}
+footer{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding:15px;
+    margin: 15px;
+    gap:20px;
+}
+footer a{
+    color:#7E93AB;
+    gap: 30px;
+}
+footer a:hover{
+    text-decoration: underline;
+}
+    </style>
 </head>
 <body>
     <main>
